--- a/client/css/include/inquiry_popup.css
+++ b/client/css/include/inquiry_popup.css
@@ -129,6 +129,12 @@ input[type="checkbox"]:checked + .inquiry-popupForm__ico-check {
   background-position: -406px -10px;
 }
 
+input[type="checkbox"]:focus-visible + .inquiry-popupForm__ico-check {
+  box-sizing:content-box;
+  border:2px solid var(--black);
+  border-radius:50%;
+}
+
 .inquiry-popupForm__label-text{
   font-size:var(--text-xs);
   line-height:19.2px;
@@ -167,5 +173,11 @@ input[type="checkbox"]:checked + .inquiry-popupForm__ico-check {
 .inquiry-popupForm__button-enroll{
   border:none;
   background:var(--gray-100);
+  color:var(--white);
+}
+
+.inquiry-popupForm__button-enroll:focus,
+.inquiry-popupForm__button-enroll:hover{
+  background:var(--primary);
   color:var(--white);
 }
