--- a/client/page/include/inquiry_popup.html
+++ b/client/page/include/inquiry_popup.html
@@ -22,14 +22,13 @@
         <div class="inquiry-popupForm__group">
           <div class="inquiry-popupForm__group-title">
             <label for="inquiryPopup-title" class="inquiryPopup-title__input-label">제목</label>
-            <input type="text" name="inquiry-title" id="inquiryPopup-title" class="inquiryPopup-title__input" required
-              placeholder="제목을 입력해 주세요">
+            <input type="text" name="inquiry-title" id="inquiryPopup-title" class="inquiryPopup-title__input" required autofocus placeholder="제목을 입력해 주세요">
           </div>
           <div class="inquiry-popupForm__group-description">
             <label for="inquiryPopup-description" class="inquiryPopup-description__input-label">내용</label>
             <textarea name="inquiryPopup-description" id="inquiryPopup-description"
               class="inquiryPopup-description__input" required
-              placeholder="상품문의 작성 전 확인해 주세요&#13&#10;• 답변은 영업일 기준 2~3일 소요됩니다.&#13&#10;• 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.&#13&#10;• 배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이칼리 내 1:1 문의에 남겨주세요.&#13&#10;제품&#13&#10;• 입고일 : 품절 상품 입고 일이 확정된 경우, 섬네일에 기재되어 있습니다. (종 모양을 클릭하여, 재입고 알림 설정 가능)&#13&#10;• 제품 상세정보 : 영양성분 및 함량, 용량, 보관 및 취급 방법 등 제품 정보는 상세이미지 또는 상세정보에서 확인 가능합니다.&#13&#10;주문취소&#13&#10;• 배송 단계별로 주문취소 방법이 상이합니다.&#13&#10;• [입금확인] 단계 : [마이칼리 > 주문내역 상세페이지] 에서 직접 취소 가능&#13&#10;• [입금확인] 이후 단계 : 고객센터로 문의&#13&#10;• 생산이 시작된 [상품 준비중] 이후에는 취소가 제한되는 점 고객님의 양해 부탁드립니다.&#13;&#10;• 비회원은 모바일 App 또는 모바일 웹사이트에서 [마이칼리 > 비회원 주문 조회 페이지] 에서 취소가 가능합니다.&#13;&#10;• 일부 예약상품은 배송 3~4일 전에만 취소 가능합니다.&#13&#10;※ 주문상품의 부분 취소는 불가능합니다. 전체 주문 취소 후 재구매 해주세요..&#13&#10;배송.&#13&#10;• 주문 완료 후 배송 방법(샛별/택배)은 변경이 불가능합니다.&#13&#10;• 배송일 배송시간 지정은 불가능합니다. (예약배송 포함)&#13&#10;※ 전화번호, 이메일, 주소, 계좌번호 등의 상세 개인정보가 문의 내용에 저장되지 않도록 주의해 주시기 바랍니다."></textarea>
+              placeholder="상품문의 작성 전 확인해 주세요&#10;• 답변은 영업일 기준 2~3일 소요됩니다.&#10;• 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.&#10;• 배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이칼리 내 1:1 문의에 남겨주세요.&#10;제품&#10;• 입고일 : 품절 상품 입고 일이 확정된 경우, 섬네일에 기재되어 있습니다. (종 모양을 클릭하여, 재입고 알림 설정 가능)&#10;• 제품 상세정보 : 영양성분 및 함량, 용량, 보관 및 취급 방법 등 제품 정보는 상세이미지 또는 상세정보에서 확인 가능합니다.&#10;주문취소&#10;• 배송 단계별로 주문취소 방법이 상이합니다.&#10;• [입금확인] 단계 : [마이칼리 > 주문내역 상세페이지] 에서 직접 취소 가능&#10;• [입금확인] 이후 단계 : 고객센터로 문의&#10;• 생산이 시작된 [상품 준비중] 이후에는 취소가 제한되는 점 고객님의 양해 부탁드립니다.&#13;&#10;• 비회원은 모바일 App 또는 모바일 웹사이트에서 [마이칼리 > 비회원 주문 조회 페이지] 에서 취소가 가능합니다.&#13;&#10;• 일부 예약상품은 배송 3~4일 전에만 취소 가능합니다.&#10;※ 주문상품의 부분 취소는 불가능합니다. 전체 주문 취소 후 재구매 해주세요..&#10;배송.&#10;• 주문 완료 후 배송 방법(샛별/택배)은 변경이 불가능합니다.&#10;• 배송일 배송시간 지정은 불가능합니다. (예약배송 포함)&#10;※ 전화번호, 이메일, 주소, 계좌번호 등의 상세 개인정보가 문의 내용에 저장되지 않도록 주의해 주시기 바랍니다."></textarea>
             <label for="inquiryPopup" class="inquiry-popupForm__label-check">
               <input type="checkbox" name="inquiry" id="inquiryPopup">
               <i class="inquiry-popupForm__ico-check"></i>
@@ -37,9 +36,9 @@
             </label>
           </div>
         </div>
-        <div class="inquiry-popupForm__button">
-          <button type="submit" class="inquiry-popupForm__button-cancel">취소</button>
-          <button type="submit" class="inquiry-popupForm__button-enroll">등록</button>
+        <div class="popupForm__button">
+          <button type="submit" class="popupForm__button-cancel">취소</button>
+          <button type="submit" class="popupForm__button-enroll">등록</button>
         </div>
       </fieldset>
     </form>
