--- a/client/css/include/product_list.css
+++ b/client/css/include/product_list.css
@@ -1,6 +1,14 @@
 .product-list {
   width: 783px;
 }
+
+.product-list__title {
+  font-weight: 600;
+  font-size: 21.328px;
+  line-height: 150%;
+  text-align: center;
+}
+
 /* list sorting */
 .product-list__inner,
 .product-list__sort {
@@ -11,42 +19,74 @@
   font-weight: 600;
   gap: 8px;
 }
+
 .product-list__inner {
   align-items: center;
   margin-bottom: var(--spacing-md);
 }
+
 .product-list--sum,
 .product-list__sort {
   font-size: var(--text-sm);
   line-height: 150%;
 }
-.product-list--sum{
+
+.product-list--sum {
   letter-spacing: -0.3px;
   color: var(--black);
 }
+
 .product-list__sort {
   color: var(--gray-300);
 }
-.product-list__sort li:first-child{
+
+.product-list__sort a {
+  padding: 5px 0;
+}
+
+.product-list__sort li:first-child {
   color: var(--black);
 }
-.product-list__sort .circle-icon{
+
+.product-list__sort .circle-icon {
   display: inline-block;
   width: 12.6px;
   height: 12.6px;
   border-radius: 50%;
-  border:  1.4px solid #CCCCCC;
+  border: 1.4px solid #CCCCCC;
   position: relative;
-  margin-left: 4px;
+  top: 2px;
 }
-.product-list__sort .question-icon{
-position: absolute;
-left: 50%;
-top: 50%; 
-margin-left: -2.5px;
-margin-top: -4px;
+
+.product-list__sort .question-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -3px;
+  margin-top: -4px;
 }
-.product-list__sort li::after{
+
+.product-list .hidden_info {
+  display: none;
+}
+
+.hidden_info.is-active {
+  position: absolute;
+  max-width: 272px;
+  border: 1px solid var(--content);
+  background-color: var(--white);
+  z-index: 20;
+  color: var(--gray-400);
+  font-size: var(--text-xs);
+  padding: 14px;
+  line-height: 16px;
+  letter-spacing: 0;
+  border-radius: 3px;
+  display: block;
+  margin-top: 20px;
+}
+
+.product-list__sort li::after {
   display: inline-block;
   content: '';
   width: 1px;
@@ -54,8 +94,9 @@ margin-top: -4px;
   background-color: var(--gray-300);
   margin-left: 8px;
 }
-.product-list__sort li:last-child:after{
-  display:none
+
+.product-list__sort li:last-child:after {
+  display: none
 }
 
 /* product list */
@@ -65,6 +106,7 @@ margin-top: -4px;
   justify-content: center;
   gap: 18px;
 }
+
 .product-list__item {
   width: 249px;
   height: 538px;
@@ -72,52 +114,61 @@ margin-top: -4px;
   flex-flow: column nowrap;
   position: relative;
 }
-.product-list__item img{
-margin-bottom: 76px;
+
+.product-list__item img {
+  margin-bottom: 76px;
 }
-.product-list__item .product--title{
-  position:absolute;
+
+.product-list__item .product--title {
+  position: absolute;
   top: 336px;
+
   font-weight: 400;
   line-height: 24px;
   color: var(--content);
 }
-.product-list__item .product--title::before{
+
+.product-list__item .product--title::before {
   content: '샛별배송';
   display: block;
   font-size: var(--text-xs);
   color: var(--gray-400);
   font-weight: 600;
 }
-.product-list__item .product--price{
+
+.product-list__item .product--price {
   font-size: 21.33px;
   font-weight: 600;
   line-height: 31.99px;
   margin-bottom: var(--spacing-xs);
 }
-.product-list__item .price--original::before{
+
+.product-list__item .price--original::before {
   content: '24%';
   font-size: 21.33px;
   font-weight: 600;
   line-height: 19.2px;
   color: var(--accent-yellow);
-  }
-.product-list__item .price--original::after{
-content: '24,900원';
-display: block;
-font-size: var(--text-xs);
-font-weight: 400;
-line-height: 19.2px;
-color: var(--gray-400);
-text-decoration: line-through;
 }
-.product-list__item .product--summary{
+
+.product-list__item .price--original::after {
+  content: '24,900원';
+  display: block;
+  font-size: var(--text-xs);
+  font-weight: 400;
+  line-height: 19.2px;
+  color: var(--gray-400);
+  text-decoration: line-through;
+}
+
+.product-list__item .product--summary {
   font-size: var(--text-sm);
   font-weight: 400;
   line-height: 19.2px;
   color: var(--gray-400);
   margin-bottom: var(--spacing-xs);
 }
+
 .karly-only {
   display: inline-block;
   background-color: var(--gray-100);
@@ -131,6 +182,7 @@ text-decoration: line-through;
   text-align: center;
   margin-right: 4px;
 }
+
 .limited--bedge {
   display: inline-block;
   background-color: var(--gray-100);
@@ -143,14 +195,16 @@ text-decoration: line-through;
   line-height: 26px;
   text-align: center;
 }
-.product-list__pagenation{
+
+.product-list__pagenation {
   height: 70px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   margin-bottom: 80px;
 }
-.product-list__pagenation a{
+
+.product-list__pagenation a {
   width: 34px;
   height: 34px;
   border: none;
@@ -173,49 +227,59 @@ text-decoration: line-through;
   box-shadow: 0px 8px 36px rgba(0, 0, 0, 0.2);
   padding: var(--spacing-lg) var(--spacing-md);
 }
+
 .modal__cart--item-title,
 .modal__cart--item-price {
   color: var(--content);
   font-weight: 600;
   line-height: 150%;
 }
+
 .modal__cart--item-title {
   margin-bottom: var(--spacing-sm);
 }
+
 .modal__cart__price {
   margin-bottom: 28px;
 }
+
 .modal__cart__price,
-.modal__cart--item-count{
+.modal__cart--item-count {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
 }
-.modal__cart--item-count{
+
+.modal__cart--item-count {
   width: 84px;
   border: 1px solid var(--gray-200);
 }
-.modal__cart--item-count button{
+
+.modal__cart--item-count button {
   background-color: transparent;
   border: none;
   width: 30px;
   height: 30px;
 }
-.modal__cart--item-count span{
+
+.modal__cart--item-count span {
   font-weight: 600;
   line-height: 150%;
 }
-.modal__cart--item-count button:first-child svg{
-position: relative;
-top:-3px;
+
+.modal__cart--item-count button:first-child svg {
+  position: relative;
+  top: -3px;
 }
-.modal__cart__sum{
+
+.modal__cart__sum {
   position: relative;
   height: 68px;
   margin-bottom: 28px;
 }
-.modal__cart__badge {
+
+.modal__cart--badge {
   display: inline-block;
   width: 37px;
   height: 18px;
@@ -229,13 +293,15 @@ top:-3px;
   text-align: center;
   line-height: 18px
 }
-.modal__cart__text {
+
+.modal__cart--text {
   font-weight: 600;
   line-height: 150%;
   position: absolute;
   top: 16px;
 }
-.modal__cart__sum-price{
+
+.modal__cart--total {
   display: inline-block;
   height: 40px;
   font-weight: 700;
@@ -244,7 +310,8 @@ top:-3px;
   position: absolute;
   right: 0;
 }
-.modal__cart__sum p{
+
+.modal__cart__sum p {
   text-align: right;
   font-weight: 600;
   line-height: 24px;
@@ -253,19 +320,21 @@ top:-3px;
   bottom: 0;
 }
 
-.modal__cart__button-wrapper button{
+.modal__cart__button-wrapper button {
   display: inline-block;
   width: 174px;
   height: 54px;
   border-radius: 4px;
 }
+
 .modal__cart--close {
   background-color: transparent;
   border: 1px solid #898989;
   font-weight: 600;
-  color:var(--content);
+  color: var(--content);
   line-height: 150%;
 }
+
 .modal__cart--in {
   background-color: var(--primary);
   border: 1px solid #898989;
@@ -279,11 +348,12 @@ top:-3px;
   content: '';
   background: url(../../assets/sprites.png) no-repeat -78px -278px;
   width: 45px;
-	height: 45px;
+  height: 45px;
   border: none;
 }
+
 .product-list .modal--cart-icon {
   position: absolute;
-  top:258px;
+  top: 258px;
   left: 189px;
 }
