--- a/client/css/include/product_list.css
+++ b/client/css/include/product_list.css
@@ -221,11 +221,19 @@
 
 /* modal menu */
 .modal__cart {
+  background-color: var(--white);
   width: 396px;
   height: 292px;
   border-radius: 16px;
   box-shadow: 0px 8px 36px rgba(0, 0, 0, 0.2);
   padding: var(--spacing-lg) var(--spacing-md);
+  position: fixed;
+  top: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+  left: 50%;
+  z-index: 1000;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 9999px;
 }
 
 .modal__cart--item-title,
