--- a/client/css/include/navigation.css
+++ b/client/css/include/navigation.css
@@ -1,9 +1,16 @@
 .nav {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 72px;
+  background-color: var(--white);
   box-shadow: 0px 3px 4px 0px rgb(0 0 0 / 7%);
+  z-index: 500;
+}
+.home__top-banner ~ .nav {
+  top: 50px;
 }
 .nav__list {
   flex: 1;
