--- a/client/css/include/navigation.css
+++ b/client/css/include/navigation.css
@@ -81,7 +81,7 @@
   top: 72px;
   left: 0;
   width: 247px;
-  height: 700px;
+  height: 70vh;
   overflow-y: auto;
   background-color: var(--white);
   border: 1px solid var(--gray-100);
