--- a/client/css/include/review_popup.css
+++ b/client/css/include/review_popup.css
@@ -1,4 +1,21 @@
 .product-review-popup{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform:translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display:none;
+  background: rgba(0,0,0,.4);
+  z-index:99;
+  position:fixed;
+}
+
+.product-review-window{
   width:793px;
   height:630px;
   padding:32px;
@@ -80,7 +97,9 @@ fieldset{
 .reviewPopup-title__input::-ms-input-placeholder,
 .reviewPopup-description__input::placeholder,
 .reviewPopup-description__input::-ms-input-placeholder{
-  color:var(--gray-300);
+  font-size:var(--text-xs);
+  font-weight:400;
+  color:var(--gray-400);
 }
 
 
@@ -99,7 +118,7 @@ fieldset{
   resize:none;
 }
 
-.popupForm__button{
+.review-popupForm__button{
   width:729px;
   height:74px;
   display:flex;
@@ -110,8 +129,8 @@ fieldset{
   padding-top:var(--spacing-md);
 }
 
-.popupForm__button-cancel,
-.popupForm__button-enroll{
+.review-popupForm__button-cancel,
+.review-popupForm__button-enroll{
   width:186px;
   height:54px;
   border-radius:4px;
@@ -121,21 +140,21 @@ fieldset{
   cursor:pointer;
 }
 
-.popupForm__button-cancel{
+.review-popupForm__button-cancel{
   border:1px solid var(--gray-200);
   font-size:var(--text-base);
   font-weight:600;
   line-height:var(--text-xl);
 }
 
-.popupForm__button-enroll{
+.review-popupForm__button-enroll{
   border:none;
   background:var(--gray-100);
   color:var(--white);
 }
 
-.popupForm__button-enroll:focus,
-.popupForm__button-enroll:hover{
+.review-popupForm__button-enroll:focus,
+.review-popupForm__button-enroll:hover{
   background:var(--primary);
   color:var(--white);
 }
