--- a/client/css/include/pd_detail_info.css
+++ b/client/css/include/pd_detail_info.css
@@ -156,7 +156,7 @@
   display: flex;
   justify-content: space-between;
   position: sticky;
-  top: 0;
+  top: 50px;
 }
 .product-information-tablist .tab {
   display: flex;
