--- a/client/css/include/main.css
+++ b/client/css/include/main.css
@@ -1,9 +1,10 @@
 /* main */
 .main__recommend-product,
 .main__best-price {
-    padding: 40px 0;
-    position: relative;
+  padding: 40px 0;
+  position: relative;
 }
+
 .main__recommend-product__title {
   font-weight: 700;
   font-size: 28.43px;
@@ -19,97 +20,99 @@
   width: 100%;
   height: 100%;
 }
-.main__recommend-product .swiper-slide, 
-.main__best-price .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
 
-/* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+.main__recommend-product .swiper-slide,
+.main__best-price .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
 /* swiper button */
 .main__recommend-product .swiper-button-next,
-.main__recommend-product .swiper-button-prev  {
+.main__recommend-product .swiper-button-prev {
   position: absolute;
-    background-color: var(--white);
-    border-radius: 50%;
-    width: 50px;
-	  height: 50px;  
-} 
+  background-color: var(--white);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
 .main__best-price .swiper-button-next,
-.main__best-price .swiper-button-prev  {
+.main__best-price .swiper-button-prev {
   position: absolute;
-    background-color: var(--white);
-    border-radius: 50%;
-    width: 50px;
-	  height: 50px;  
-} 
+  background-color: var(--white);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
 .main .swiper-button-next::after,
 .main .swiper-button-prev::after {
-    display: none;
-  }
+  display: none;
+}
+
 .main__recommend-product .swiper-button-next,
-.main__best-price .swiper-button-next{
-  top:259px;
-  right:-25px;
-  }
+.main__best-price .swiper-button-next {
+  top: 259px;
+  right: -25px;
+}
 
 .main__recommend-product .swiper-button-prev,
-.main__best-price .swiper-button-prev{
-    top:259px;
-    left:-25px;
-  }
-.main__best-price .swiper-pagination,
-.main__recommend-product .swiper-pagination{
-  /* display: none; */
+.main__best-price .swiper-button-prev {
+  top: 259px;
+  left: -25px;
 }
+
 /* figure in swiper  */
 
 .main__recommend-product .swiper-slide,
-.main__best-price .swiper-slide{
+.main__best-price .swiper-slide {
   width: 249px;
   height: 426px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
- 
+
 }
+
 .main__recommend-product .swiper img,
-.main__best-price .swiper img{
+.main__best-price .swiper img {
   max-width: 100%;
-	transition: all 0.5s ease-in-out 0s;
-  /* icon위치 설정을 위한 position */
+  transition: all 0.5s ease-in-out 0s;
   position: relative;
 }
 
 .main__recommend-product .swiper-image,
 .main__best-price .swiper-image {
-  display: inline-block;
+  display: block;
   width: 249px;
   height: 320px;
   overflow: hidden;
 }
+
 .main__recommend-product .swiper-image:hover img,
 .main__best-price .swiper-image:hover img {
   -webkit-transform: scale(1.02);
-	transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 .main__recommend-product .swiper figcaption,
-.main__best-price .swiper figcaption{
+.main__best-price .swiper figcaption {
   position: absolute;
   top: 336px;
   left: 0;
@@ -118,8 +121,9 @@
   line-height: 160%;
   font-weight: 400;
 }
+
 .main__recommend-product .swiper p,
-.main__best-price .swiper p{
+.main__best-price .swiper p {
   font-weight: 600;
   font-size: 21.328px;
   line-height: 150%;
@@ -127,23 +131,25 @@
   top: 370px;
   left: 0;
 }
+
 /* sale */
 .main__page .price--sale::before {
-  content:'24%';
+  content: '24%';
   color: var(--accent-yellow);
   font-weight: 600;
   font-size: 21.328px;
   line-height: 150%;
   margin-right: var(--spacing-xs);
 }
+
 .main__page .price--sale::after {
   display: block;
-  content:'24,000원';
+  content: '24,000원';
   color: var(--gray-400);
   font-weight: 400;
   font-size: var(--text-xs);
   line-height: 160%;
-  text-decoration:line-through;
+  text-decoration: line-through;
   text-align: left;
 }
 
@@ -152,26 +158,27 @@
   content: '';
   background: url(../../assets/sprites.png) no-repeat -78px -278px;
   width: 45px;
-	height: 45px;
+  height: 45px;
   border: none;
 }
+
 .main__page .modal--cart-icon {
   position: absolute;
-  top:258px;
+  top: 258px;
   left: 189px;
 }
 
 /* aside swiper*/
-.aside__recent{
-  display:flex;
+.aside__recent {
+  display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   width: 74px;
   height: 223px;
   position: fixed;
-  top:193px;
-  right:39px;
+  top: 193px;
+  right: 39px;
   border: 1px solid var(--gray-200);
   z-index: 500;
   background-color: var(--white);
@@ -207,21 +214,25 @@
 
 .main__aside .aside-swiper-button-prev {
   content: '';
-  background: url(../../assets/sprites.png) no-repeat -412px -190px;
+  background: url(../../assets/sprites.png) no-repeat -405px -185px;
   width: 6px;
   height: 10px;
+  padding: 10px;
   transform: rotate(270deg);
   margin: 0;
   order: -1;
+  cursor: pointer;
 }
 
 .main__aside .aside-swiper-button-next {
   content: '';
-  background: url(../../assets/sprites.png) no-repeat -412px -190px;
+  background: url(../../assets/sprites.png) no-repeat -405px -185px;
   width: 6px;
   height: 10px;
   transform: rotate(90deg);
   margin: 0;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .main__aside .swiper-slide img {
