Fix pages using Web Developer (#70)

--- a/client/css/include/signup.css
+++ b/client/css/include/signup.css
@@ -166,7 +166,12 @@
   margin-left: 8px;
 }
 
+.signup-form__term-wrap {
+  display: flex;
+}
+
 .signup-form__label-check {
+  flex-grow: 1;
   position: relative;
   display: flex;
   align-items: center;
