--- a/client/css/include/product_list.css
+++ b/client/css/include/product_list.css
@@ -115,16 +115,16 @@
   position: relative;
 }
 
-.product--title+dd {
+.product--title+div {
   width: 249px;
   height: 320px;
   overflow: hidden;
+  margin-bottom: 76px;
 }
 
 .product-list__item img {
-  max-width: 100%;
+  width: 100%;
   transition: all 0.5s ease-in-out 0s;
-  margin-bottom: 76px;
 }
 
 .product-list__item:hover img {
@@ -135,7 +135,6 @@
 .product-list__item .product--title {
   position: absolute;
   top: 336px;
-
   font-weight: 400;
   line-height: 24px;
   color: var(--content);
@@ -147,13 +146,6 @@
   font-size: var(--text-xs);
   color: var(--gray-400);
   font-weight: 600;
-}
-
-.product-list__item .product--price {
-  font-size: 21.33px;
-  font-weight: 600;
-  line-height: 31.99px;
-  margin: 80px 0 var(--spacing-xs) 0;
 }
 
 .product-list__item .price--original::before {
@@ -173,6 +165,14 @@
   color: var(--gray-400);
   text-decoration: line-through;
 }
+
+.product-list__item .product--price {
+  font-size: 21.33px;
+  font-weight: 600;
+  line-height: 31.99px;
+  margin: 80px 0 var(--spacing-xs) 0;
+}
+
 
 .product-list__item .product--summary {
   font-size: var(--text-sm);
