--- a/client/css/include/pd_detail_info.css
+++ b/client/css/include/pd_detail_info.css
@@ -12,6 +12,9 @@
 .product__info {
   width: 560px;
 }
+.product__info picture {
+  width: 100%;
+}
 .product__info--delivery {
   color: var(--gray-500);
   font-size: var(--text-lg);
@@ -25,6 +28,7 @@
 }
 .product__info--summary {
   color: var(--gray-400);
+  font-size: var(--text-base);
   font-weight: 300;
   line-height: 160%;
 }
