--- a/client/css/include/signup.css
+++ b/client/css/include/signup.css
@@ -37,7 +37,7 @@
 
 .signup-form__item {
   display: flex;
-  align-items: center;
+  align-items:flex-start;
   gap: 8px;
   flex-wrap: wrap;
   min-height: 84px;
@@ -49,6 +49,7 @@
   flex-shrink: 0;
   width: 139px;
   font-weight: 700;
+  line-height:44px;
   cursor: pointer;
 }
 
@@ -82,6 +83,13 @@
   border-radius: 4px;
   font-weight: 700;
   color: var(--primary);
+}
+
+.signup-form__valid {
+  margin-top: 4px;
+  color: var(--accent-yellow);
+  font-size: var(--text-sm);
+  line-height: 19px;
 }
 
 .signup-form__button--loca {
