--- a/client/css/include/signup.css
+++ b/client/css/include/signup.css
@@ -152,18 +152,19 @@
   display: inline-block;
   padding: 0 54px 0 8px;
   font-weight: 700;
+  line-height: 44px;
 }
 
 .signup-form__terms {
   display: flex;
-  padding: 20px 8px;
+  padding: 12px 8px 20px;
   border-top: 1px solid black;
   border-bottom: 1px solid var(--gray-200);
 }
 
 .signup-form__check-terms {
   width: 100%;
-  margin-left: 8px;
+  margin-left: 8px 0 0 8px;
 }
 
 .signup-form__term-wrap {
