Refactory pages' path for dev

--- a/client/css/include/signup.css
+++ b/client/css/include/signup.css
@@ -164,7 +164,7 @@
 
 .signup-form__check-terms {
   width: 100%;
-  margin-left: 8px 0 0 8px;
+  margin: 8px 0 0 8px;
 }
 
 .signup-form__term-wrap {
